--- a/src/Example.Mvc/Views/Home/Index/_center.cshtml
+++ b/src/Example.Mvc/Views/Home/Index/_center.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Example.Dto.UI
-@using Tts.Framework.AspNetMvc.Extension
+@using Example.Dto.Auth
 @model IEnumerable<PermissionMenuDto>
 <div id="tabs" class="easyui-tabs" data-options="border:false,fit:true,tools:'#tab-tools'">
     @foreach (var p in Model)
