--- a/src/Example.Mvc/Views/Home/Index/_west.cshtml
+++ b/src/Example.Mvc/Views/Home/Index/_west.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Example.Dto.UI
-@using Tts.Framework.AspNetMvc.Extension
+@using Example.Dto.Auth
 @model IEnumerable<PermissionMenuDto>
 @helper RenderMenu(IEnumerable<PermissionMenuDto> menus)
 {
