--- a/src/Example.Mvc/Views/Home/Login.cshtml
+++ b/src/Example.Mvc/Views/Home/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-@model Example.Dto.Business.LoginDto
+@model Example.Dto.LoginDto
 <!DOCTYPE html>
 
 <html>
@@ -12,9 +12,7 @@
     <script src="~/Scripts/easyui/jquery.easyui.min.js"></script>
     <link href="~/Content/easyui/themes/material/easyui.css" rel="stylesheet" />
     <script src="~/Scripts/ls/jquery.ls.extension.js"></script>
-    <script src="~/Scripts/ls/ls.common.js"></script>
-    <script src="~/Scripts/ls/ls.form.js"></script>
-    <script src="~/Scripts/ls/ls.controls.js"></script>
+    @Scripts.Render("~/bundles/ls")
     <link href="~/Content/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <script src="~/Components/artDialog/js/dialog-plus.js"></script>
     <link href="~/Components/artDialog/css/ui-dialog.css" rel="stylesheet" />
@@ -65,7 +63,7 @@
             </div>
             <div class="col-md-4">
 
-            </div>  
+            </div>
         </div>
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
@@ -98,10 +96,10 @@
                             @Html.PasswordFor(t => t.Password, new { @class = "form-control", @placeholder = "请输入密码", @id = "txtPassword" })
                         </div>
                         @*<div class="checkbox">
-                            <label>
-                                <input name="RememberMe" type="checkbox" value="Remember Me">记住我
-                            </label>
-                        </div>*@
+                                <label>
+                                    <input name="RememberMe" type="checkbox" value="Remember Me">记住我
+                                </label>
+                            </div>*@
                         <!-- Change this to a button or input when using this as a form -->
                         <input type="button" id="submit" style="background:#273952;height:38px;" class="btn btn-primary btn-block" value="登录" />
                     </fieldset>
