--- a/src/Example.Mvc/Views/Home/Index/_center.cshtml
+++ b/src/Example.Mvc/Views/Home/Index/_center.cshtml
@@ -7,7 +7,7 @@
         <div title="@p.MenuName">
             <div class="easyui-layout" data-options="fit:true">
                 <div data-options="region:'center',border:false", style='padding-bottom:-20px;padding-left:5px;padding-right:5px;overflow:hidden'>
-                    <iframe tabid="@p.Id" scrolling="no" frameborder="0" src="@Url.Content(p.Url + "?pageId=" + p.Id, true)" style="width:100%;height:100%;"></iframe>
+                    <iframe tabid="@p.Id" scrolling="no" frameborder="0" src="@Url.Content(p.Url + "?pageId=" + p.Id)" style="width:100%;height:100%;"></iframe>
                 </div>
             </div>
         </div>
