--- a/src/Example.Mvc/Views/Home/Index/_west.cshtml
+++ b/src/Example.Mvc/Views/Home/Index/_west.cshtml
@@ -8,7 +8,7 @@
         if (item.Children == null)
         {
             <li>
-                <a class="node" onclick="addTab('@Url.Content((item.Url ?? "~/Home/ErrorPage_404") + "?pageId=" + item.Id, true)','@item.MenuName','@item.Id',this)">
+                <a class="node" onclick="addTab('@Url.Content((item.Url ?? "~/Home/ErrorPage_404") + "?pageId=" + item.Id)','@item.MenuName','@item.Id',this)">
                     <i class="fa @item.Icon fa-fw" aria-hidden="true"></i>
                     <span>@item.MenuName</span>
                 </a>
