--- a/src/Example.Mvc/Areas/SystemManage/Views/UserManage/_editForm.cshtml
+++ b/src/Example.Mvc/Areas/SystemManage/Views/UserManage/_editForm.cshtml
@@ -32,8 +32,8 @@
         @Html.HiddenFor(x => x.Id, new { @id = "hidId" })
         <table>
             <tr>
-                <td>@Html.LabelFor(x => x.UserName)</td>
-                <td>@Html.TextBoxFor(x => x.UserName, new { @class = "easyui-textbox" })</td>
+                <td>@Html.LabelFor(x => x.Name)</td>
+                <td>@Html.TextBoxFor(x => x.Name, new { @class = "easyui-textbox" })</td>
             </tr>
             <tr>
                 <td>
