--- a/src/Example.Mvc/Views/Home/Login.cshtml
+++ b/src/Example.Mvc/Views/Home/Login.cshtml
@@ -8,15 +8,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>登录</title>
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/easyui/jquery.easyui.min.js"></script>
-    <link href="~/Content/easyui/themes/material/easyui.css" rel="stylesheet" />
-    <script src="~/Scripts/ls/jquery.ls.extension.js"></script>
+    @Scripts.Render("~/bundles/baseComponents")
     @Scripts.Render("~/bundles/ls")
-    <link href="~/Content/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <script src="~/Components/artDialog/js/dialog-plus.js"></script>
-    <link href="~/Components/artDialog/css/ui-dialog.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    @Styles.Render("~/bundles/baseComponentsStyle")
     <link href="~/Content/Site.css" rel="stylesheet" />
     <link href="~/Content/easyui/tts.easyui.theme.css" rel="stylesheet" />
     <link href="~/Content/login.css" rel="stylesheet" />
