--- a/src/Example.Mvc/Views/Home/Index/_north.cshtml
+++ b/src/Example.Mvc/Views/Home/Index/_north.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Example.Dto.UI
 @using Example.Dto.Auth
 @model IEnumerable<PermissionMenuDto>
-<span class="h3 index-header-title" style="margin-right:5px;"><i class="fa fa-x fa-bar-chart"></i>客运数据平台</span>
+<span class="h3 index-header-title" style="margin-right:5px;"><i class="fa fa-x fa-bar-chart"></i>Ls-Admin</span>
 
 @foreach (var item in Model)
 {
