--- a/src/Example.Mvc/Views/Shared/_LayoutDialogPage.cshtml
+++ b/src/Example.Mvc/Views/Shared/_LayoutDialogPage.cshtml
@@ -23,7 +23,7 @@
 </head>
 <body>
     <input id="_hidPageId" type="hidden" value="@Request.QueryString["pageId"]" />
-    <div class="container">
+    <div class="container ls-dialog-container">
         @RenderBody()
     </div>
     <div class="container" style="text-align:right;position:absolute;bottom:15px;right:30px;">
