--- a/src/Example.Mvc/Views/Home/Login.cshtml
+++ b/src/Example.Mvc/Views/Home/Login.cshtml
@@ -29,6 +29,7 @@
                         }
                         else if (content.Result === 100) {
                             $.ls.success("登录成功！");
+                            $("#submit").attr("disabled","disabled").val("登录成功,正在跳转...");
                             window.location = '@Url.Action("Index")';
                         }
                     }
@@ -61,7 +62,7 @@
         </div>
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <h2 style="text-align: center;font-size:3.5em; font-family: 'Agency FB'; color: #fbfbfb; padding-left:40px;">
+                <h2 style="text-align: center;font-size:3.5em; font-family: 'Agency FB'; color: #fbfbfb;">
                     <span class="data active">
                         <i></i>
                         <i></i>
@@ -89,12 +90,6 @@
                         <div class="form-group">
                             @Html.PasswordFor(t => t.Password, new { @class = "form-control", @placeholder = "请输入密码", @id = "txtPassword" })
                         </div>
-                        @*<div class="checkbox">
-                                <label>
-                                    <input name="RememberMe" type="checkbox" value="Remember Me">记住我
-                                </label>
-                            </div>*@
-                        <!-- Change this to a button or input when using this as a form -->
                         <input type="button" id="submit" style="background:#273952;height:38px;" class="btn btn-primary btn-block" value="登录" />
                     </fieldset>
                 </form>
