--- a/src/Example.Mvc/Views/Home/TabIndex.cshtml
+++ b/src/Example.Mvc/Views/Home/TabIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@using Example.Dto.UI
+﻿@using Example.Dto.Auth
 @model IEnumerable<PermissionMenuDto>
 @{
     Layout = null;
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="ls-panel ls-panel-primary tabindex-panel-tip">
                     <div class="ls-panel-content ls-panel-content-primary tabindex-panel-content">
                         <div class="left">
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="ls-panel ls-panel-yellow tabindex-panel-tip">
                     <div class="ls-panel-content ls-panel-content-yellow tabindex-panel-content">
                         <div class="left">
@@ -58,7 +58,7 @@
                         </div>
                         <div class="right">
                             <div style="font-size:2.3em;text-align:right;">32</div>
-                            <div style="text-align:right;">售票总数</div>
+                            <div style="text-align:right;">警告</div>
                         </div>
                     </div>
                     <div class="ls-panel-footter ls-panel-footter-yellow tabindex-panel-footter">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="ls-panel ls-panel-red tabindex-panel-tip">
                     <div class="ls-panel-content ls-panel-content-red tabindex-panel-content">
                         <div class="left">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="right">
                             <div style="font-size:2.3em;text-align:right;">666</div>
-                            <div style="text-align:right;">售票总数</div>
+                            <div style="text-align:right;">错误</div>
                         </div>
                     </div>
                     <div class="ls-panel-footter ls-panel-footter-red tabindex-panel-footter">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-6">
                 <div class="ls-panel ls-panel-green tabindex-panel-tip">
                     <div class="ls-panel-content ls-panel-content-green tabindex-panel-content">
                         <div class="left">
@@ -92,7 +92,7 @@
                         </div>
                         <div class="right">
                             <div style="font-size:2.3em;text-align:right;">322</div>
-                            <div style="text-align:right;">取票总数</div>
+                            <div style="text-align:right;">总量</div>
                         </div>
                     </div>
                     <div class="ls-panel-footter ls-panel-footter-green tabindex-panel-footter">
