--- a/src/Example.Mvc/Views/Shared/_LayoutDialogPage.cshtml
+++ b/src/Example.Mvc/Views/Shared/_LayoutDialogPage.cshtml
@@ -8,8 +8,8 @@
     @Scripts.Render("~/bundles/ls")
     @Styles.Render("~/bundles/baseComponentsStyle")
     <script src="~/Scripts/ls/jquery.easyui.extension.validate.js"></script>
-    <link href="~/Content/Site.css" rel="stylesheet" />
-    <link href="~/Content/easyui/tts.easyui.theme.css" rel="stylesheet" />
+    <link href="~/Content/ls.admin.css" rel="stylesheet" />
+    <link href="~/Content/ls.site.css" rel="stylesheet" />
     <style type="text/css">
         .container{padding:5px;}
     </style>
