--- a/src/Example.Mvc/Views/Home/TabIndex.cshtml
+++ b/src/Example.Mvc/Views/Home/TabIndex.cshtml
@@ -10,18 +10,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/easyui/jquery.easyui.min.js"></script>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/easyui/themes/material/easyui.css" rel="stylesheet" />
-    <script src="~/Scripts/ls/ls.common.js"></script>
-    <script src="~/Scripts/ls/ls.controls.js"></script>
+    @Scripts.Render("~/bundles/baseComponents")
+    @Scripts.Render("~/bundles/ls")
+    @Styles.Render("~/bundles/baseComponentsStyle")
     <script src="~/Scripts/ls/ls.layout.index.js"></script>
-    <link href="~/Content/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <script src="~/Components/artDialog/js/dialog-plus.js"></script>
-    <link href="~/Components/artDialog/css/ui-dialog.css" rel="stylesheet" />
-    <link href="~/Content/easyui/tts.easyui.theme.css" rel="stylesheet" />
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Content/ls.admin.css" rel="stylesheet" />
+    <link href="~/Content/ls.site.css" rel="stylesheet" />
 </head>
 @helper RenderPermissionParts()
 {
